ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser642331/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser642331/input.ts:2:18
  |
2 |     constructor (static) { }
  |                  ^^^^^^

